enum MessageType 
{
    Text = 0;
    Voice = 1;
    Image = 2;
    Video = 3; 
    Position = 4;
    File = 5;

    Notify = 10;
    Ack =11;
    Exist = 12;
    System = 99;
    Custom = 100;
}

message TransfromText 
{ // 0
    required string contents = 1; 
}

message TransfromVoice 
{ // 1
    required int64 duration=1;
    required string md5=2;
    required string url=3;
    required string ext=4;
    required int64 size=5;
}

message TransfromImage 
{ // 2
    required string name=1;
    required string md5 = 2;
    required string url = 3;
    required string ext =4;
    required int64 w =5;
    required int64 h =6;
    required int64 size =7;
}

message TransfromVideo 
{ // 3
    required int64 duration=1;
    required string md5 = 2;
    required string url = 3;
    required string ext =4;
    required int64 w =5;
    required int64 h =6;
    required int64 size =7;
}

message TransfromPosition 
{ // 4
    required string title = 1;
    required int64 lng = 1;         // 经度
    required int64 lat = 1;         // 纬度
}

message TransfromFile 
{ // 5
    required string name=1;
    required string md5 = 2;
    required string url = 3;
    required string ext =4;
    required int64 size =5;
}

message InternNotify
{ // -1
    required int64 code = 1;
    required string message = 2;
}

message TransfromNotify
{ // 10
    optional InternNotify internalNotify= 1;
}

message TransfromAck
{ // 11
    required string ack = 1;
}

message TransfromExist 
{ // 12
    optional InternNotify internalNotify= 1;
}

message TransfromSystem
{ // 99
    required int64 code = 1;
    required string contents = 2;
}

message TransfromCustom
{ //100
    map<string, string> option =1;
    map<string, string> server =2;
}

message yuzhitalkproto
{
    // protobuf body
    required MessageType messageType =1 [default = Text];
    required int64 timestamp =2;
    required int64 statustransfrom =3;
    required int64 statustransto =4;
    optional int64 id = 5;

    oneof body {
        TransfromText transfromtext =6;
        TransfromVoice transfromVoice =7;
        TransfromImage transfromImage =8;
        TransfromVideo transfromVideo =9;
        TransfromPosition transfromPosition =10;
        TransfromFile transfromFile =11;

        TransfromExist transfromExist=12;
        TransfromAck transfromAck =13;
        TransfromNotify transfromNotify =14;
        TransfromSystem transfromSystem = 15;
        TransfromCustom transfromCustom = 16;
    }
}